--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-#mdeditor-toolbar {
+.mdeditor-toolbar {
   z-index: 999999;
   background-color: whitesmoke;
   box-shadow: 0px 0px 12px 1px grey;
@@ -6,7 +6,15 @@
   cursor: pointer;
   border-radius: 40px;
   color:black;
-  height: 48px;
+  height: 25px;
   width: 100%;
-  margin: 10px;
+  margin: 10px 0px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.mdeditor-toolbar button{
+  background-color: transparent;
+  font-weight: bold;
+  border: none;
 }
