--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,16 +5,20 @@
   text-align: center;
   cursor: pointer;
   border-radius: 40px;
-  color:black;
+  color: black;
   height: 25px;
   width: 100%;
   margin: 10px 0px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
-.mdeditor-toolbar button{
+.mdeditor-toolbar a {
   background-color: transparent;
   font-weight: bold;
   border: none;
+  text-decoration: none;
+  color: black;
+
 }
